# Forge-Starter

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  FORGE-FOLLOW-UPS.md  FORGE-ROUTE-DSL-PROPOSAL.md  Makefile  NEW-PORTAL.md  STARTER-BASELINE.md  biome.jsonc  build.rs  opencode.json  package-lock.json  package.json  rust_backend_architecture_blueprint.md
.claude/: settings.json
.claude/hooks/: format-after-edit.sh
.claude/skills/: SKILL-CONVENTIONS.md
config/: app.toml  auth.toml  database.toml  email.toml  forge.toml  i18n.toml  jobs.toml  observability.toml  redis.toml  scheduler.toml  server.toml  storage.toml  typescript.toml  websocket.toml
database/migrations/: 000000000001_create_personal_access_tokens.rs  000000000002_create_admins.rs  000000000002_create_password_reset_tokens.rs  000000000003_create_notifications.rs  000000000004_create_job_history.rs  000000000005_create_attachments.rs  000000000006_create_metadata.rs  000000000007_create_model_translations.rs  000000000008_create_countries.rs  000000000009_create_settings.rs  000000000010_create_audit_logs.rs  000000000010_create_users.rs  000000000011_create_admins.rs  (+8 more)
docs/: forge-todo.md
frontend/: CLAUDE.md  tsconfig.json
scripts/: build.sh  check-starter-guardrails.sh  deploy-poll.sh  setup.sh  watch-rust.sh
src/: lib.rs  main.rs
src/domain/: mod.rs
tests/: admin_badges.rs  export_bindings.rs  observability_access.rs  runtime_bootstrap_cache.rs  starter_guardrails.rs  user_baseline.rs
(+341 files in other folders)
